--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.5.2
 Django==3.2.13
 docutils==0.14
 lockfile==0.11.0
-pystache==0.5.4
+#pystache==0.5.4
 python-daemon==2.2.3
 pytz==2022.1
 simplejson==3.2.0
